Fixed chat dynamic height adjustment on mobile

--- a/src/components/Chats2/ChatsMobile.css
+++ b/src/components/Chats2/ChatsMobile.css
@@ -1,3 +1,88 @@
+.chatMobileWrap {
+	position: fixed !important;
+	left: 0px !important;
+	top: 0px !important;
+	height: 100% !important;
+	width: 100% !important;
+	color: white;
+	background-color: white;
+}
+
+@media screen and (min-width: 500px) {
+	.chatMobileWrap {
+		position: fixed !important;
+		left: 0px !important;
+		top: 0px !important;
+		height: 100% !important;
+		width: 100% !important;
+		color: white;
+		background-color: white;
+	}
+	.chatMobileButton {
+		position: absolute;
+		width: 25vw !important;
+		height: 100vh !important;
+		text-align: left !important;
+		color: rgb(24, 144, 255);
+	}
+	.chatListm {
+		position: absolute;
+		left: 0px;
+		width: 25vw;
+		height: 100%;
+	  }
+	
+	  .chatFeedm {
+		position: absolute;
+		left: 25vw;
+		width: 50vw;
+		height: 100%;
+	  }
+	  .chatSetm {
+		position: absolute;
+		right: 0px;
+		width: 25vw;
+		height: 100%;
+	  }
+  }
+  
+  @media screen and (max-width: 500px) {
+	.chatMobileWrap {
+		position: fixed !important;
+		left: 0px !important;
+		top: 0px !important;
+		height: 100% !important;
+		width: 100% !important;
+		color: white;
+		background-color: white;
+	}
+	.chatMobileButton {
+		position: absolute;
+		width: 100vw !important;
+		height: 100vh !important;
+		text-align: left !important;
+		color: rgb(24, 144, 255);
+	}
+	.chatListm {
+		position: absolute;
+		left: 0px;
+		width: 0vw;
+		height: 100%;
+	  }
+	
+	  .chatFeedm {
+		position: absolute;
+		left: 0vw;
+		width: 100vw;
+		height: 100%;
+	  }
+	  .chatSetm {
+		position: absolute;
+		right: 0px;
+		width: 0vw;
+		height: 100%;
+	  }
+  }
 /* Global */
 
 
